ex5/testdata/typechecker/error/ArrayTest-err2.java
class ArrayTest {
	public static void main(String[] a){
            int[] b;
            boolean c;
            b = new int[4]; 
            c = b[2]; // TE
	}
}

